# FOMO-backend

./: .gitignore  API_DOCUMENTATION.md  DOCUMENTATION.md  README.md  setup_wizard.py
.github/workflows/: daily-collect.yml  test.yml
app/: api_bridge.py  backend_path.py  ktor_manager.py  main.py  mcp_config.py  pyinstaller.spec  pyproject.toml  scheduler.py  secrets_store.py  tray.py
app/views/: dashboard.html  mcp.html  settings.html  setup.html  styles.css
backend/: .env.example  collector.py  config.py  db.py  filter.py  mcp_config_example.json  mcp_server.py  pyproject.toml  run_daily.py
backend/sources/: arxiv.py  devto.py  github_trending.py  hackernews.py  huggingface.py  lobsters.py  mastodon.py  reddit.py  rss.py  soundcloud.py  stackexchange.py  youtube.py
installer/: build.ps1  trendhopper.iss
ktor-api/: build.gradle.kts  gradle.properties  settings.gradle.kts
ktor-api/src/main/kotlin/com/trendhopper/: Application.kt
ktor-api/src/main/kotlin/com/trendhopper/models/: Requests.kt  Responses.kt
ktor-api/src/main/kotlin/com/trendhopper/plugins/: Auth.kt  CORS.kt  Logging.kt  Routing.kt  Serialization.kt  StatusPages.kt
ktor-api/src/main/kotlin/com/trendhopper/routes/: AgentRoutes.kt  FavoritesRoutes.kt  ItemsRoutes.kt  NotesRoutes.kt  SearchRoutes.kt  SettingsRoutes.kt  SourcesRoutes.kt  StatsRoutes.kt  SyncRoutes.kt  TopicsRoutes.kt
ktor-api/src/main/kotlin/com/trendhopper/services/: GroqClient.kt  SupabaseClient.kt
ktor-api/src/main/resources/: application.yaml
supabase/: 001_schema.sql  002_add_llm_reasoning.sql  003_add_sources.sql
