[project]
name = "trend-hopper-backend"
version = "0.1.0"
description = "Trend Hopper backend collector, filter, and MCP server"
requires-python = ">=3.12"
dependencies = [
    "supabase>=2.0",
    "groq>=0.5",
    "praw>=7.7",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "mcp>=1.0",
    "httpx>=0.27",
]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.3"]
